# libang_orc_trim

./: .gitignore  dino_base.py  download_model.py  prompt.py  pyproject.toml  test_torch.py  utils.py
.cursor/commands/: review.md
examples/: COMPARISON.md  IMPROVEMENTS.md  QUICK_REFERENCE.md  SUMMARY.md  load_train_data.py  ocr_example_usage.py  process_and_ocr_img.py  use_dino_base.py
